add common uni cli structure using kotlin